fix(blog-cards): remove max-height on small screens

--- a/assets/css/scss/elements/base/_blog.scss
+++ b/assets/css/scss/elements/base/_blog.scss
@@ -41,6 +41,10 @@
     position: relative;
     display: flex;
     max-height: 25rem;
+
+    @include responsive(xs) {
+      max-height: unset;
+    }
     
     a {
       position: relative;
