--- a/style.css
+++ b/style.css
@@ -569,6 +569,11 @@ img {
   display: flex;
   max-height: 25rem;
 }
+@media screen and (max-width: 540px) {
+  #home-blog .blog-card {
+    max-height: unset;
+  }
+}
 #home-blog .blog-card a {
   position: relative;
 }
